Fix style for table header on Safari browser
ISSUE: CS-333

--- a/src/views/css/packlink.css
+++ b/src/views/css/packlink.css
@@ -38,7 +38,7 @@
   background-color: #f5f5f5;
   border-right: 1px solid #dcdcdc;
   max-width: 250px;
-  width: 20%;
+  width: 18%;
   height: 100%;
 }
 
@@ -253,6 +253,7 @@
   font-weight: bold !important;
   background-color: white;
   position: sticky;
+  position: -webkit-sticky; /* Safari fallback */
   top: 0;
   z-index: 400;
   vertical-align: middle !important;
